Endpoint para get por codigo
